--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  h1 {
+    @apply text-6xl font-semibold;
+  }
+
+  h2 {
+    @apply text-lg;
+  }
+
+  h3 {
+    @apply text-4xl font-semibold;
+  }
+
+  h4 {
+    @apply text-lg font-semibold;
+  }
+
+  body {
+    @apply bg-[#fefefe];
+  }
+
+  main {
+    @apply w-full min-h-screen items-center justify-start;
+  }
+}
